crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@139.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT d1 as timestamptz,\n   date_part( 'quarter', d1) AS quarter, date_part( 'msec', d1) AS msec,\n   date_part( 'usec', d1) AS usec\n   FROM TIMESTAMPTZ_TBL;"
---
SelectStmt@0..157
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    ColumnRef@7..9
      Ident@7..9 "d1"
    Whitespace@9..10 " "
    As@10..12 "as"
    Whitespace@12..13 " "
    Ident@13..24 "timestamptz"
  Ascii44@24..25 ","
  Newline@25..26 "\n"
  Whitespace@26..29 "   "
  ResTarget@29..65
    FuncCall@29..53
      Ident@29..38 "date_part"
      Ascii40@38..39 "("
      Whitespace@39..40 " "
      AConst@40..49
        Sconst@40..49 "'quarter'"
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      ColumnRef@51..53
        Ident@51..53 "d1"
    Ascii41@53..54 ")"
    Whitespace@54..55 " "
    As@55..57 "AS"
    Whitespace@57..58 " "
    Ident@58..65 "quarter"
  Ascii44@65..66 ","
  Whitespace@66..67 " "
  ResTarget@67..97
    FuncCall@67..88
      Ident@67..76 "date_part"
      Ascii40@76..77 "("
      Whitespace@77..78 " "
      AConst@78..84
        Sconst@78..84 "'msec'"
      Ascii44@84..85 ","
      Whitespace@85..86 " "
      ColumnRef@86..88
        Ident@86..88 "d1"
    Ascii41@88..89 ")"
    Whitespace@89..90 " "
    As@90..92 "AS"
    Whitespace@92..93 " "
    Ident@93..97 "msec"
  Ascii44@97..98 ","
  Newline@98..99 "\n"
  Whitespace@99..102 "   "
  ResTarget@102..132
    FuncCall@102..123
      Ident@102..111 "date_part"
      Ascii40@111..112 "("
      Whitespace@112..113 " "
      AConst@113..119
        Sconst@113..119 "'usec'"
      Ascii44@119..120 ","
      Whitespace@120..121 " "
      ColumnRef@121..123
        Ident@121..123 "d1"
    Ascii41@123..124 ")"
    Whitespace@124..125 " "
    As@125..127 "AS"
    Whitespace@127..128 " "
    Ident@128..132 "usec"
  Newline@132..133 "\n"
  Whitespace@133..136 "   "
  From@136..140 "FROM"
  Whitespace@140..141 " "
  RangeVar@141..156
    Ident@141..156 "TIMESTAMPTZ_TBL"
  Ascii59@156..157 ";"

