crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM TIMESTAMPTZ_TBL;
---
DeleteStmt@0..28
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Ascii59@27..28 ";"

