crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@149.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, 'Y,YYY YYYY YYY YY Y CC Q MM WW DDD DD D J')\n   FROM TIMESTAMPTZ_TBL;"
---
SelectStmt@0..88
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..62
    FuncCall@7..62
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..62
        Sconst@19..62 "'Y,YYY YYYY YYY YY Y  ..."
  Ascii41@62..63 ")"
  Newline@63..64 "\n"
  Whitespace@64..67 "   "
  From@67..71 "FROM"
  Whitespace@71..72 " "
  RangeVar@72..87
    Ident@72..87 "TIMESTAMPTZ_TBL"
  Ascii59@87..88 ";"

