crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@152.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, E'\"HH:MI:SS is\" HH:MI:SS \"\\\\\"text between quote marks\\\\\"\"')\n   FROM TIMESTAMPTZ_TBL;"
---
SelectStmt@0..103
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..77
    FuncCall@7..77
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..77
        Sconst@19..77 "E'\"HH:MI:SS is\" HH:MI ..."
  Ascii41@77..78 ")"
  Newline@78..79 "\n"
  Whitespace@79..82 "   "
  From@82..86 "FROM"
  Whitespace@86..87 " "
  RangeVar@87..102
    Ident@87..102 "TIMESTAMPTZ_TBL"
  Ascii59@102..103 ";"

